SERVER-39421 Fix opCtx and baton waits

1. Interruptible::waitForConditionOrInterruptFor with a predicate didn't
   wait the correct amount of time.

2. baton_asio_linux would fail to expire timers whose deadline == now
   (only expiring those 1 millisecond past now). This caused it to spin
   unnecessarily just as timers were expiring.