src/mongo/util/interruptible.h
@@ -311,8 +311,9 @@ public:
                                         stdx::unique_lock<stdx::mutex>& m,
                                         Milliseconds ms,
                                         Pred pred) {
+        const auto deadline = getExpirationDateForWaitForValue(ms);
         while (!pred()) {
-            if (stdx::cv_status::timeout == waitForConditionOrInterruptFor(cv, m, ms)) {
+            if (stdx::cv_status::timeout == waitForConditionOrInterruptUntil(cv, m, deadline)) {
                 return pred();
             }
         }
